--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1>💑 Nosso Amor</h1>
+  <h1>Nosso Amor - Diego & Aléxia</h1>
   <img src="foto_namorados_resized.jpg" alt="Foto nossa">
   <div id="contador"></div>
   <div class="frase">“Uma vida é pouco para te amar”</div>
